--- a/app/styles/_orcamento.scss
+++ b/app/styles/_orcamento.scss
@@ -106,7 +106,12 @@ $print-font-size: 11px;
 
     &:hover {
       @extend .highlight;
+      text-decoration: none;
     }
+  }
+
+  a.btn-orcamento {
+    padding: 10px;
   }
 
   .dropdown-menu {
