--- a/app/styles/_follow_up.scss
+++ b/app/styles/_follow_up.scss
@@ -11,6 +11,11 @@
   ul[name='historico'] {
     min-height: 250px;
   }
+
+  .botao-calendario {
+    height: 20px;
+    padding: 0 15px;
+  }
 }
 
 //.campo-duplo {
