--- a/app/views/follow_up.html
+++ b/app/views/follow_up.html
@@ -58,7 +58,7 @@
             <!--<td class="hidden-xs"><a href=""><span class="glyphicon glyphicon-pencil"></span></a></td>-->
             <!--<td class="hidden-xs"><a href=""><span class="glyphicon glyphicon-plus-sign"></span></a></td>-->
             <!--<td class="hidden-xs"><a href=""><span class="glyphicon glyphicon-time"></span></a></td>-->
-            <td class="hidden-xs"><a ng-href="#/atendimento/{{a.codigo}}"><span class="glyphicon glyphicon-open-file"></span></a></td>
+            <td class="hidden-xs"><a ng-href="#/atendimento/open?type=attendance&code={{a.codigo}}"><span class="glyphicon glyphicon-open-file"></span></a></td>
           </tr>
           </tbody>
         </table>
