--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -374,7 +374,7 @@
         <button class="btn btn-orcamento" ng-click="orcamento.pagamento()"><span class="glyphicon glyphicon-credit-card"></span> Pagamento</button>
       </div>
       <div class="col-sm-6 col-md-3">
-        <a class="btn btn-orcamento" ng-href="#/atendimento"><span class="glyphicon glyphicon-list-alt"></span> Atendimento</a>
+        <button class="btn btn-orcamento" ng-click="orcamento.abrirAtendimento()"><span class="glyphicon glyphicon-list-alt"></span> Atendimento</button>
       </div>
       <div class="col-sm-6 col-md-3">
         <button class="btn btn-orcamento" ng-click="orcamento.imprimir()"><span class="glyphicon glyphicon-print"></span> Imprimir</button>
